Expand/collapse button for info, description sections Delayed hover on/off rather than instant Link to semantic scholar and link highlighting General style changes and bug fixes

--- a/src/components/css/cite.css
+++ b/src/components/css/cite.css
@@ -6,16 +6,8 @@
   content: var(--cite-list-end);
 }
 
-/* .cite-ref {
-  text-decoration: underline dotted #aaa;
-} */
-
 .citation, .citation-err {
   font-weight: bold;
-}
-
-.citation:not(:hover) *, .citation-err:not(:hover) * {
-  display: none;
 }
 
 .citation-err:hover {
@@ -27,11 +19,12 @@
 }
 
 .cit, .cit-err {
-  display: inline;
+  display: none;
+  background-color: white;
+  z-index: 1;
   position: absolute;
-  transform: translate(10px, -10px);
+  transform: translate(28px, -23px);
   width: 300px;
-  background: white;
   font-size: small;
   font-weight: 300;
   color: black;
@@ -43,62 +36,74 @@
 .cit-err {
   font-weight: bold;
   text-align: center;
-  width: 100px;
+  padding: 4px;
+  width: auto;
+  transform: translate(16px, -3px);
+}
+
+.cit-err-arrow {
+  position: absolute;
+  left: -12px;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent; 
+  border-right: 12px solid black; 
 }
 
 .cit-head {
   display: flex;
   flex-direction: column;
-  background: whitesmoke;
-  padding: 5px 10px 5px 10px;
+  background-color: whitesmoke;
+  padding: 4px 8px 4px 8px;
   border-radius : 6px 6px 0 0;
+  line-height: 1;
 }
 
 .cit-head-title {
-  min-height: 24px;
-  line-height: 1;
   font-size: medium;
+  font-weight: 400;
 }
 
 .cit-head-subtitle {
-  padding-top: 5px;
-  min-height: 18px;
-  line-height: 1;
+  padding-top: 4px;
 }
 
-.arrow-left {
+.cit-head-arrow {
   position: absolute;
-  left: -10px;
-  top: 10px;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent; 
-  border-right:10px solid black; 
+  left: -24px;
+  top: 16px;
+  border-top: 18px solid transparent;
+  border-bottom: 18px solid transparent; 
+  border-right: 24px solid black; 
 }
 
-.cit-head-info {
-  min-height: 18px;
-  display: flex;
-  justify-content: space-between;
+.cit-head-arrow p {
+  position: absolute;
+  transform: translate(50%,-50%);
+  width: 16px;
+  font-weight: 400;
+  text-align: center;
+  color: white;
 }
 
-.cit-info-item {
-  padding: 0;
+.cit-body:not(:hover) {
+  background-image: linear-gradient(transparent 85%,95%,steelblue 105%);
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 .cit-body {
-  padding: 5px 10px 5px 10px;
+  padding: 4px 8px 16px 8px;
   border-radius : 0 0 6px 6px;
   border-top: .1px solid black;
   line-height: 1.3;
 }
 
 .cit-body-auth {
-  min-height: 18px;
-  padding-bottom: 5px;
+  padding-bottom: 4px;
 }
 
-.cit-body-abst {
+.cit-body-desc {
   min-height: 108px;
-  padding-top: 5px;
+  padding-top: 4px;
   border-top: .1px solid black;
 }
